testdata/baselines/reference/compiler/tluaTypeCallIfExhaustive.errors.txt
tluaTypeCallIfExhaustive.tlua(37,7): error TLUA2322: Type 'number | nil' is not assignable to type 'number'.
  Type 'nil' is not assignable to type 'number'.


==== tluaTypeCallIfExhaustive.tlua (1 errors) ====
    type Mixed = { n: number } | LuaThread | ((a: number) => void) | string | nil;
    
    function clauses(v: Mixed): string
      if type(v) == "string" then
        local s: string = v;
        return s;
      elseif type(v) == "table" or type(v) == "function" then
        // An or-grouped condition narrows to the union of its tags.
        local tf: { n: number } | ((a: number) => void) = v;
        return "tf";
      elseif type(v) == "thread" then
        local th: LuaThread = v;
        return "thread";
      else
        // The final else is left with what no other arm handled.
        local rest: nil = v;
        return "nil";
      end
    end
    
    // Handling every tag in arms without a final else still leaves the fall-out
    // path: the exhaustive-switch return inference did not survive switch's
    // deletion, so the return type gains nil.
    function allTagsNoElse(u: unknown)
      if type(u) == "nil" then return 1
      elseif type(u) == "boolean" then return 2
      elseif type(u) == "number" then return 3
      elseif type(u) == "string" then return 4
      elseif type(u) == "table" then return 5
      elseif type(u) == "function" then return 6
      elseif type(u) == "thread" then return 7
      elseif type(u) == "userdata" then return 8
      elseif type(u) == "cdata" then return 9
      end
    end
    
    local widened: number = allTagsNoElse(1); // error: number | nil
          ~~~~~~~
!!! error TLUA2322: Type 'number | nil' is not assignable to type 'number'.
!!! error TLUA2322:   Type 'nil' is not assignable to type 'number'.
    
    // The final else of a chain covering a concrete union narrows to never, so an
    // else-based exhaustiveness check types clean.
    function coveredUnion(v: string | LuaThread): number
      if type(v) == "string" then
        return 1;
      elseif type(v) == "thread" then
        return 2;
      else
        local n: never = v;
        return 3;
      end
    end
    